--- a/index.html
+++ b/index.html
@@ -80,11 +80,44 @@
   <section class="banner">
     <div class="banner-content">
 
+
+
+      <h1 class="banner-title">
+        PLAY LIKE THE
+      </h1>
+      <h1 class="goat">
+        G.O.A.T.
+      </h1>
+      <p class="banner-details">
+        1 click instant play.
+
+      </p>
+      <p class="banner-details">
+        No download.
+
+      </p>
+      <p class="banner-details">
+        Online game.
+
+      </p>
+      <div class="button-banner">
+        <button class="sign">
+          Sign in
+        </button>
+        <button class="up">
+          Sign up
+        </button>
+      </div>
+
     </div>
     <div class="banner-img">
 
+      <img src="./images/Group 18.png" alt="Fight">
+
+
     </div>
   </section>
+  <!-- Funny-videos -->
 
 </body>
 
