--- a/index.html
+++ b/index.html
@@ -118,6 +118,41 @@
     </div>
   </section>
   <!-- Funny-videos -->
+  <section class="funny-videos">
+    <h1 class="funny-videos-title">
+      Online Games <span class="funny">Funny Videos</span>
+    </h1>
+    <p class="funny-videos-description">
+      A Collection of Hilarious Videos to Brighten Your Day
+    </p>
+    <div class="funny-img-container">
+      <div class="funny-img">
+        <figure> <img class="figure" src="./images/Rectangle 4.png" alt="">
+          <figcaption>
+            No Download. No Installs. Play games Instantly on Gamer.
+          </figcaption>
+        </figure>
+      </div>
+      <div class="funny-img">
+        <figure><img class="figure" src="./images/Rectangle 5.png" alt="">
+          <figcaption> Did you score? #unblockedgames #school</figcaption>
+        </figure>
+      </div>
+      <div id="video-img" class="funny-img">
+        <figure><img class="figure" src="./images/Rectangle 7.png" alt="">
+          <figcaption>Breaking game records like OG</figcaption>
+        </figure>
+      </div>
+      <div class="funny-img">
+        <figure><img class="figure" src="./images/Rectangle 6.png" alt="">
+          <figcaption>
+            Busted gaming on school laptop, but you are still lit.
+          </figcaption>
+        </figure>
+      </div>
+    </div>
+
+  </section>
 
 </body>
 
