--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
   </section>
   <!-- Funny-videos -->
-  <section class="funny-videos">
+  <section>
     <h1 class="funny-videos-title">
       Online Games <span class="funny">Funny Videos</span>
     </h1>
@@ -150,7 +150,31 @@
           </figcaption>
         </figure>
       </div>
+
     </div>
+
+  </section>
+  <!-- New Section -->
+
+  <section>
+    <div class="horse">
+      <div class="horse-details">
+        <h1 class="horse-title">
+          <span class="play">Play Instantly,</span>
+          No Downloads
+          No Installs.
+        </h1>
+        <h1 class="horse-description">
+          Play games online for free without downloading. Just click the Play button and play instantly in
+          your browser.
+        </h1>
+      </div>
+      <div class="horse-img">
+        <img class="horseman" src="./images/Rectangle 55.png" alt="Horse">
+        <img class="doll" src="./images/Rectangle 66.png" alt="doll">
+      </div>
+    </div>
+
 
   </section>
 
