--- a/index.html
+++ b/index.html
@@ -177,7 +177,92 @@
 
 
   </section>
+  <!-- Icon Section -->
+  <section class="icon-container">
+    <section class=" first-icon">
+      <div class="sing-icon">
+        <img src="./images/Rectangle 11.png" alt="" class="icon-img">
+        <p class="icon-details">Action Games</p>
+      </div>
+      <div class="sing-icon">
+        <img src="./images/Rectangle 12.png" alt="" class="icon-img">
+        <p class="icon-details">Adventure Games</p>
+      </div>
+      <div class="sing-icon educational">
+        <img src="./images/Rectangle 13.png" alt="" class="icon-img">
+        <p class="icon-details">Educational Games</p>
+      </div>
+      <div class="sing-icon">
+        <img src="./images/Rectangle 14.png" alt="" class="icon-img">
+        <p class="icon-details">Music Games</p>
+      </div>
+      <div class="sing-icon">
+        <img src="./images/Rectangle 15.png" alt="" class="icon-img">
+        <p class="icon-details">Puzzle Games</p>
+      </div>
 
+      </div>
+
+    </section>
+    <section class="second-icon">
+      <div class="sing-icon">
+        <img src="./images/Rectangle 16.png" alt="" class="icon-img">
+        <p class="icon-details">Ghost Games</p>
+      </div>
+      <div class="sing-icon">
+        <img src="./images/Rectangle 17.png" alt="" class="icon-img">
+        <p class="icon-details">Fight Games</p>
+      </div>
+      <div class="sing-icon">
+        <img src="./images/Rectangle 18.png" alt="" class="icon-img">
+        <p class="icon-details">Race Games</p>
+      </div>
+      <div class="sing-icon">
+        <img src="./images/Rectangle 19.png" alt="" class="icon-img">
+        <p class="icon-details">Football Games</p>
+    </section>
+  </section>
+  <footer class="footer">
+    <div class="gamer-container">
+      <img src="./images/Frame.png" alt="Gaming-pad" class="gamer-img">
+      <h1 class="gamer-title">
+        <span class="spn-G">G</span><span class="amer">amer</span>
+      </h1>
+    </div>
+    <div class="footer-title">
+      <p>Our Story</p>
+      <p>Games</p>
+      <p>Career</p>
+      <p>Support</p>
+      <p>Portal</p>
+
+    </div>
+    <div class="footer-icon">
+      <img src="./images/facebook 1.png" alt="">
+      <img src="./images/apple 1.png" alt="">
+      <img src="./images/instagram 1.png" alt="">
+      <img src="./images/linkedin 1.png" alt="">
+      <img src="./images/twitter 1.png" alt="">
+      <img src="./images/youtube.png" alt="">
+    </div>
+    <div class="footer-description">
+      <p>Terms</p>
+      <p>Conditions</p>
+      <p>Privacy</p>
+      <p>Policy</p>
+
+
+    </div>
+    <p class="footer-finishing">
+      Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+
+    </p>
+
+
+
+
+
+  </footer>
 </body>
 
 </html>
